bin/tests/snapshots/collapsible_let_in__lint_f40f57bb65dbbd0f124aec8bcb999f04b601baca2a00bb5707eee6fc011adca9.snap
---
source: bin/tests/collapsible_let_in.rs
expression: "\"{\\n  pkgs ? import <nixpkgs> { },\\n}:\\nlet\\n  pkgs' = pkgs.extend (import ./overlay.nix);\\nin\\nlet\\n  pkgs = pkgs';\\nin\\npkgs\\n\""
---
[W06] Warning: These let-in expressions are collapsible
    ╭─[<temp_file_path>:4:1]
    │
  4 │ ╭───▶ let
  7 │ │ ╭─▶ let
 10 │ │ ├─▶ pkgs
    · │ │      │   
    · │ ╰────────── This let in expression is nested
    · │        │   
    · ╰────────┴─── This let in expression contains a nested let in expression
────╯
