bin/tests/snapshots/collapsible_let_in__lint_fe25e67d93fa84cbd3753185f7f64e6307ab4d0d824f1546e179a513aa56f99a.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f y;
in
let
  z = 1;
in
x

---
[W06] Warning: These let-in expressions are collapsible
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭───▶ let
 4 │ │ ╭─▶ let
 7 │ │ ├─▶ x
   · │ │   │   
   · │ ╰─────── This let in expression is nested
   · │     │   
   · ╰─────┴─── This let in expression contains a nested let in expression
───╯
